oppdaterte footer og top

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 </div>
 <footer>
-	<p><a href="index.php">Obligatorisk oppgave 2, Web1000</a> | Trond Halvorsen </p>
+	<p><a href="index.php">Obligatorisk oppgave 3, Web1000</a> | Gruppe 3 </p>
 </footer>
 </div>
 </body>
