--- a/top.html
+++ b/top.html
@@ -15,6 +15,10 @@
 		<a href="vis-studenter.php">Vis studenter</a>
 		<a href="endre-student.php">Endre student</a>
 		<a href="slett-student.php">Slett student</a>
+		<a href="registrer-bilde.php">Registrer Bilde</a>
+		<a href="vis-alle-bilder.php">Vis Bilder</a>
+		<a href="mhm.php">Placeholder</a>
+		<a href="search.php">Søk</a>
 </nav>
 <br>
 <div id="body">
