--- a/top.html
+++ b/top.html
@@ -18,6 +18,7 @@
 		<a href="registrer-bilde.php">Registrer Bilde</a>
 		<a href="vis-alle-bilder.php">Vis Bilder</a>
 		<a href="mhm.php">Placeholder</a>
+		<a href="hentklasse.php">Vis klasse</a>
 		<a href="search.php">Søk</a>
 </nav>
 <br>
