Think I'm done with that, søk er nå i footer

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,17 @@
 </div>
 <footer>
-	<p><a href="index.php">Obligatorisk oppgave 3, Web1000</a> | Gruppe 3 </p>
+<table width="100%">
+
+<tr>
+	<td><a href="index.php">Obligatorisk oppgave 3, Web1000</a> | Gruppe 3 <td>
+<td align="center"> 
+	<form action="search.php" method="post" id="SearchKnapp" name="SearchKnapp">
+        <input id="search" type="text" name="search" required>
+        <input type="submit" value="Søk DB" id="SearchKnapp" name="SearchKnapp">
+</form>
+</td>
+</tr>
+</table>
 </footer>
 </div>
 </body>
