Endret en link i top.html

--- a/top.html
+++ b/top.html
@@ -18,7 +18,7 @@
 		<a href="registrer-bilde.php">Registrer Bilde</a>
 		<a href="vis-alle-bilder.php">Vis Bilder</a>
 		<a href="endre-bilde.php">Endre Bilde</a>
-		<a href="hentklasse.php">Vis klasse</a>
+		<a href="slett-bilde.php">Slett bilder</a>
 </nav>
 <br>
 <br>
