Endret linktekst på vis-alle-klasser.php

--- a/top.html
+++ b/top.html
@@ -8,7 +8,7 @@
 <div id="wrapper">
 <nav id="mainnav">
         <a href="registrer-klasse.php">Registrer Klasse</a>
-        <a href="vis-alle-klasser.php">Vis klasser</a>
+        <a href="vis-alle-klasser.php">Vis klasser / klasseliste</a>
  		<a href="endre-klasse.php">Endre klasse</a>
 		<a href="slett-klasse.php">Slett klasse</a>
         <a href="registrer-student.php">Registrer Student</a>
