--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
 	<td><a href="index.php">Obligatorisk oppgave 3, Web1000</a> | Gruppe 3 <td>
 <td align="center"> 
 	<form action="search.php" method="post" id="SearchKnapp" name="SearchKnapp">
-        <input id="search" type="text" name="search" required>
+        <input id="search" type="text" name="search"> <!-- required -->
         <input type="submit" value="Søk DB" id="SearchKnapp" name="SearchKnapp">
 </form>
 </td>
